# Zume

./: .gitignore  AGENTS.md  CURSOR_START_HERE.md  README.md  STARTER_PACKAGE_MANIFEST.txt  constraints.txt  pyproject.toml
config/: document-theme.yaml  exercise-library.yaml  hiring-standard.yaml  interview-question-library.yaml  privacy.yaml  role-policies.yaml  statuses.yaml  triggers.yaml
docs/: 01_Zume_Project_Blueprint.docx  02_Cursor_Master_Build_Prompt.docx  03_Zume_User_Operating_Guide.docx  04_Hiring_Standard_and_Scoring.docx  05_Core_Interview_Exercise_Library.docx  06_Communication_Template_Library.docx  07_Fictional_Sample_Candidate_Package.docx  ARCHITECTURE.md  ASK_ZUME.md  AUDIO_AND_VOICE.md  EXERCISE_LAB.md  KNOWLEDGE_LIBRARY.md  OPERATING_GUIDE.md  PREPARATION_WORKSPACE.md  PRIVACY.md  RELEASE_AND_RECOVERY.md  SECURITY_AND_SECRETS.md  TROUBLESHOOTING.md  ZUME_DAILY_USE_GUIDE.md  ZUME_TROUBLESHOOTING_GUIDE.md  Zume_Daily_Use_Guide.docx  Zume_Troubleshooting_Guide.docx
knowledge/: README.md  sources.yaml  taxonomy.yaml
reports/: CI_VISIBILITY_AND_LOCKDOWN.md  COWORK_FULL_VALIDATION.md  COWORK_FULL_VALIDATION_STALE_ENV.md  COWORK_VALIDATION_INPUTS.md  DOCX_RENDER_VALIDATION.md  FINAL_DOCUMENT_VISUAL_QA.md  FINAL_LOCKDOWN_VALIDATION_REPORT.md  FINAL_SIMPLIFICATION_BASELINE.md  FINAL_SIMPLIFICATION_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  GENERAL_DOCS_CLEANUP_REPORT.md  HARDENING_FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  INDEPENDENT_REPOSITORY_AUDIT.md  PUBLIC_REPOSITORY_RISK_ASSESSMENT.md  QUESTION_LIBRARY_CONTENT_REVIEW.md  V1_BASELINE_AUDIT.md  (+13 more)
(+477 files in other folders)
