[project]
name = "zume"
version = "0.1.0"
description = "Local-first Senior SDET hiring operations toolkit"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.2",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "pypdf>=5.0",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6.0"]

[project.scripts]
zume = "zume.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
