[project]
name = "zume"
version = "1.0.0"
description = "Local-first interview hiring and preparation workspace"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.2",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "pypdf>=5.0",
  "Pillow>=10.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6.0"]
# Optional: enables Microsoft Word COM rendering for DOCX visual QA on Windows.
win = ["pywin32>=306; platform_system == 'Windows'"]

[project.scripts]
zume = "zume.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["zume"]
branch = true

[tool.coverage.report]
show_missing = true
# Meaningful threshold reflecting current suite coverage; do not lower to pass.
fail_under = 80
